# cevda

./: .env  .env.nonprod  .gitignore  README.md  amplify.yml  docker-compose.yml
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  workflow.yml
backend/: README.md  pyproject.toml
backend/cevda/assessments/: Dockerfile  go.mod  go.sum  main.go
backend/cevda/assessments/apperrors/: apperrors.go
backend/cevda/assessments/command/seed/: main.go
backend/cevda/assessments/data/: questions.go  questions.json
backend/cevda/assessments/dynamodb/: client.go  tables.go
backend/cevda/assessments/handlers/: attempts.go  health.go  questions.go  router.go
backend/cevda/assessments/middleware/: cors.go
backend/cevda/assessments/models/: attempts.go  questions.go
backend/cevda/assessments/repository/: attempts.go  attempts_dynamo.go  questions.go  questions_dynamo.go
backend/cevda/assessments/services/: assessment.go
backend/cevda/assessments/utils/: phone.go
backend/cevda/notifications/: constants.py  email_handler.py
frontend/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Accordion.tsx  Card.tsx  Carousel.tsx  Footer.tsx  Grid.tsx  Input.tsx  InputGroup.tsx  Layout.tsx  Navigation.tsx
frontend/src/hooks/: useRecaptcha.tsx  useSubmit.tsx
frontend/src/routes/: Admission.tsx  Careers.tsx  Characteristics.tsx  Contact.tsx  EnglishExam.tsx  Home.tsx  Infotep.tsx
frontend/src/scripts/: i18n.ts
(+23 files in other folders)
