[project]
name = "cevda-backend"
version = "0.1.0"
description = "Backend scripts for CEVDA project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "boto3>=1.35.97",
    "ruff>=0.9.1",
]
